examples/invalid/test20.alice

The looking-glass hatta ()
opened
  x was a number.
  opened
    y was a number and y became 10.
  closed
  y became 100.
closed 
